[package]
name = "nimble-seer"
version = "0.0.16-dev"
edition = "2021"
license = "MIT"
description = "Nimble Prediction"
repository = "https://github.com/nimble-rust/nimble"
categories = ["game-development"]
keywords = ["game", "network"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tick-queue = "0.0.2"
tick-id = "0.0.9"
log = "0.4.22"
flood-rs = "0.0.12"
err-rs = "0.0.4"

[dev-dependencies]
test-log = "0.2.16"
