[package]
name = "nimble-step-map"
version = "0.0.16"
edition = "2021"
license = "MIT"
description = "Nimble Step Map"
repository = "https://github.com/nimble-rust/nimble"
categories = ["game-development"]
keywords = ["game", "network"]

[dependencies]
nimble-participant = { path = "../participant", version = "0.0.16" }
seq-map = "0.0.2"
