[package]
name = "nimble-wrapped-step"
version = "0.0.15-dev"
edition = "2021"
license = "MIT"
description = "Nimble Wrapped Steps"
repository = "https://github.com/nimble-rust/nimble"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flood-rs = "0.0.12"
